CMAKE_MINIMUM_REQUIRED(VERSION 3.9.6)

PROJECT(FastWindingNumber)
SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

IF (NOT TARGET tbb)
    FIND_PACKAGE(TBB REQUIRED)

    ADD_LIBRARY(tbb INTERFACE IMPORTED)
    TARGET_INCLUDE_DIRECTORIES(tbb SYSTEM INTERFACE ${TBB_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(tbb INTERFACE
        ${TBB_LIBRARIES})

    ADD_LIBRARY(tbbmalloc INTERFACE IMPORTED)
    TARGET_INCLUDE_DIRECTORIES(tbbmalloc SYSTEM INTERFACE
        ${TBB_MALLOC_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(tbbmalloc INTERFACE
        ${TBB_MALLOC_LIBRARIES})

    ADD_LIBRARY(tbbmalloc_proxy INTERFACE IMPORTED)
    TARGET_INCLUDE_DIRECTORIES(tbbmalloc_proxy SYSTEM INTERFACE
        ${TBB_MALLOC_PROXY_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(tbbmalloc_proxy INTERFACE
        ${TBB_MALLOC_PROXY_LIBRARIES})
ENDIF (NOT TARGET tbb)

SET(SRC_FILES
    UT_Array.cpp
    UT_SolidAngle.cpp)
SET(INC_FILES
    SYS_Math.h
    SYS_Types.h
    UT_Array.h
    UT_ArrayImpl.h
    UT_BVH.h
    UT_BVHImpl.h
    UT_FixedVector.h
    UT_ParallelUtil.h
    UT_SmallArray.h
    UT_SolidAngle.h
    VM_SIMD.h
    VM_SSEFunc.h)

ADD_LIBRARY(FastWindingNumber SHARED ${SRC_FILES} ${INC_FILES})
TARGET_LINK_LIBRARIES(FastWindingNumber PUBLIC tbb tbbmalloc)

ADD_SUBDIRECTORY(tests EXCLUDE_FROM_ALL)

INSTALL(TARGETS FastWindingNumber
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    )
INSTALL(FILES ${INC_FILES}
    DESTINATION include/FastWindingNumber)
